fix: enforce tenant scope in admin operations